--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "slackify",
-  "version": "0.0.0",
-  "main": "index.ts",
-  "license": "MIT",
-  "scripts": {
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.10",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^24.4.0",
-    "jest": "^27.0.6",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
-  }
+    "name": "slackify",
+    "version": "0.0.0",
+    "main": "index.ts",
+    "license": "MIT",
+    "author": "Adrian Pothuaud <adrianpothuaud+github@gmail.com> (https://github.com/AP-ero)",
+    "scripts": {
+        "lint": "eslint src/** --fix",
+        "prepare": "husky install",
+        "test": "jest"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^13.1.0",
+        "@commitlint/config-conventional": "^13.1.0",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^16.4.10",
+        "@typescript-eslint/eslint-plugin": "^4.29.0",
+        "@typescript-eslint/parser": "^4.29.0",
+        "eslint": "^7.32.0",
+        "eslint-plugin-jest": "^24.4.0",
+        "husky": "^7.0.1",
+        "jest": "^27.0.6",
+        "ts-jest": "^27.0.4",
+        "ts-node": "^10.1.0",
+        "typescript": "^4.3.5"
+    }
 }
