docs: add auto changelog

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "scripts": {
         "lint": "eslint src/** --fix",
         "prepare": "husky install",
-        "test": "jest"
+        "test": "jest",
+        "version": "auto-changelog -p && git add CHANGELOG.md"
     },
     "devDependencies": {
         "@commitlint/cli": "^13.1.0",
@@ -31,6 +32,7 @@
         "@types/node": "^16.4.10",
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
+        "auto-changelog": "^2.3.0",
         "eslint": "^7.32.0",
         "eslint-plugin-jest": "^24.4.0",
         "husky": "^7.0.1",
