--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Install-Build-Test-Report:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -14,4 +14,17 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - name: Install dependencies
+        run: yarn install
+      - name: Build Typescript
+        run: yarn build
+      - name: Run tests
+        run: yarn test
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - name: Upload Codecov report
+        env:
+          codecov_token: ${{ secrets.CODECOV_TOKEN }}
+        run: yarn codecov --token=$codecov_token
       - run: echo "🍏 This job's status is ${{ job.status }}."
