--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
         "auto-changelog": "^2.3.0",
+        "codecov": "^3.8.3",
         "eslint": "^7.32.0",
         "eslint-plugin-jest": "^24.4.0",
         "husky": "^7.0.1",
