--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "version": "0.0.1",
     "main": "build/src/lib/index.js",
     "scripts": {
+        "build": "tsc",
         "lint": "eslint src/** --fix",
         "prepare": "husky install",
         "test": "jest",
