--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
     },
+    "include": [
+        "src/**/*"
+    ],
     "exclude": [
         "node_modules",
         "build",
