feat: update workflows

--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -1,5 +1,11 @@
 name: Validate Push
-on: [push]
+on:
+  push:
+    branches:
+      - '*'         # matches every branch that doesn't contain a '/'
+      - '*/*'       # matches every branch containing a single '/'
+      - '**'        # matches every branch
+      - '!master'   # excludes master
 jobs:
   Install-Build-Test-Report:
     runs-on: ubuntu-latest
