--- a/.github/workflows/patch_and_publish.yml
+++ b/.github/workflows/patch_and_publish.yml
@@ -17,6 +17,8 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - name: Install dependencies
+        run: yarn install
       - name: Patch version
         run: yarn version --patch
       - name: Build Typescript
