--- a/.github/workflows/patch_and_publish.yml
+++ b/.github/workflows/patch_and_publish.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
 jobs:
-  Install-Patch-Build-Publish:
+  Install-Build-Publish:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -19,8 +19,6 @@ jobs:
           ls ${{ github.workspace }}
       - name: Install dependencies
         run: yarn install
-      - name: Patch version
-        run: yarn version --patch
       - name: Build Typescript
         run: yarn build
       - name: Deploy NPM Package
